# riss

./: .astylerc  .ci  .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  TODO.md  VERSION  cp.sh  cp3.sh  license.txt  qp.sh  replace.py  riss4-tunable.pcs  riss4.pcs
CSSC/: convertSMACtunedConfigs.sh  createSMACruns.sh  mapCSSCparams.py  modelChecked.sh  modelCheckedCSSC.sh
aiger/: CMakeLists.txt  abc-demo.c  abc_configs.txt  aig-plain-bmc.c  aigand.c  aigbmc.c  aigbmc.cc  aigdd.c  aiger.c  aiger.h  aigflip.c  aigfuzz.c  aigfuzz.h  aigfuzzlayers.c  aiginfo.c  aigjoin.c  aigmiter.c  aigmove.c  aignm.c  aigor.c  aigreset.c  aigsim.c  aigsplit.c  aigstrip.c  aigtoaig.c  aigtoblif.c  aigtocnf.c  aigtodot.c  aigtosmv.c  aigunroll.c  aigvis  andtoaig.c  bliftoaig.c  bound4.aig  bug.aig  check-aig.sh  check-aigbmc.sh  check.sh  compare.sh  demo.c  (+11 more)
aiger-src/: aigbmc.c  makefile
checker/: Makefile  README  checkSingle.sh  cnfdd.c  cnfuzz.c  coprocessor  findBugs.sh  ms.sh  precochk.c  runcnfuzz  scriptCheck.sh  verify.sh
classifier/: BipartiteGraph.cc  BipartiteGraph.h  CHANGES.md  CMakeLists.txt  CNFClassifier.cc  CNFClassifier.h  Classifier.cc  Classifier.h  ConfigurationSelector.h  Configurations.cc  Configurations.h  FeaturesWriter.cc  FeaturesWriter.h  Graph.cc  Graph.h  Main.cc  SequenceStatistics.cc  SequenceStatistics.h  WekaDataset.cc  WekaDataset.h  knn.cc  knn.h  knnvar.cc  methods.cc  methods.h  useful.cc  useful.h
classifier-src/: BipartiteGraph.cc  CNFClassifier.cc  CNFClassifier.h  Classifier.cc  Classifier.h  Configurations.cc  Configurations.h  Graph.cc  Main.cc  Makefile  SequenceStatistics.cc  WekaDataset.cc
cmake/: FindLibrt.cmake  GitSignature.cmake  MergeStaticLibs.cmake
configuration/: bve-0.txt  bve-4.txt  bve-default-2.txt  bve-fg-0.txt  bve-fg-2.txt  bve-fg-4.txt  bve-fg-8.txt  bve-fg-hu2-0.txt  bve-fg-hu2-2.txt  bve-fg-hu2-4.txt  bve-fg-hu2-8.txt  bve-force-gates-updates2-0.txt  bve-force-gates-updates2-4.txt  bve-force-gates-updates2-8.txt  bve-hu2-0.txt  bve-hu2-2.txt  bve-hu2-4.txt  bve-hu2-8.txt  bve-no-gates-0.txt  bve-no-gates-4.txt  (+23 more)
coprocessor/: BCE.cc  BCE.h  BVA.cc  BVA.h  BVE.cc  BVEParallel.cc  BoundedVariableElimination.cc  BoundedVariableElimination.h  BoundedVariableEliminationParallel.cc  Bva.cc  Bva.h  CHANGES  CHANGES.md  CMakeLists.txt  CP3Config.cc  CP3Config.h  Circuit.cc  Circuit.h  ClauseElimination.cc  ClauseElimination.h  Coprocessor.cc  Coprocessor.h  CoprocessorTypes.h  CoprocessorTypes.h.orig  Dense.cc  Dense.h  Entailed.cc  Entailed.h  EquivalenceElimination.cc  EquivalenceElimination.h  Experimental.cc  Experimental.h  FourierMotzkin.cc  FourierMotzkin.h  HiddenTautologyElimination.cc  HiddenTautologyElimination.h  LiteralAddition.cc  LiteralAddition.h  Main.cc  MaxsatWrapper.cc  (+39 more)
coprocessor/techniques/: BCE.cc  BCE.h  BE.cc  BE.h  BVA.cc  BVA.h  BVE.cc  BVE.h  BVEParallel.cc  BackboneSimplification.cc  BackboneSimplification.h  ClauseElimination.cc  ClauseElimination.h  Dense.cc  Dense.h  Entailed.cc  Entailed.h  EquivalenceElimination.cc  EquivalenceElimination.h  Experimental.cc  Experimental.h  FourierMotzkin.cc  FourierMotzkin.h  HBR.cc  HBR.h  HiddenTautologyElimination.cc  HiddenTautologyElimination.h  LiteralAddition.cc  LiteralAddition.h  ModPrep.cc  ModPrep.h  Probing.cc  Probing.h  Propagation.cc  Propagation.h  RATE.cc  RATE.h  Resolving.cc  Resolving.h  Rewriter.cc  (+13 more)
features/: BipartiteGraph.cc  BipartiteGraph.h  CHANGES.md  CMakeLists.txt  CNFClassifier.cc  CNFClassifier.h  CompareSolver.h  Configurations.cc  FeaturesWriter.cc  FeaturesWriter.h  Graph.cc  Graph.h  GraphInformation.h  Main.cc  Main.cpp  SequenceStatistics.h  community.h  communityInformation.h  dimension.h
knntool/: CMakeLists.txt  Main.cc  Makefile  Parser.h  README.md  Trainer.cc  Trainer.h  methods.h  runTrainer.sh  useful.h
knntool/src/: Parser.h  Trainer.cc  Trainer.h  methods.h  useful.h
libpca/: CMakeLists.txt  README.md  config-pcasso.patch  config.patch  pca.cc  pca.h  utils.cc
mprocessor/: CMakeLists.txt  Main.cc  Makefile  WDimacs.h
pcasso/: CHANGES  CMakeLists.txt  ISolver.h  InstanceSolver.h  LevelPool.cc  LevelPool.h  LookaheadSplitting.cc  LookaheadSplitting.h  Main.cc  Master.cc  Master.h  PartitionTree.cc  PartitionTree.h  PcassoClause.h  PcassoComConfig.cc  PcassoComConfig.h  RWLock.h  Shared_pool.h  SolverInterface.h  SolverPT.cc  SolverPT.h  SolverPriss.cc  SolverPriss.h  SolverRiss.cc  SolverRiss.h  SplitterSolver.h  ToString.h  shared_pool.cc  version.cc  version.cmake  version.h  vsidsSplitting.cc  vsidsSplitting.h
pfolio/: CMakeLists.txt  CommunicatorClient.h  Main.cc  PSolver.cc  PSolver.h  PfolioConfig.cc  PfolioConfig.h  libprissc.cc  libprissc.h
qprocessor/: CMakeLists.txt  Main.cc  QDimacs.h
riss/: CHANGES  CMakeLists.txt  NuSVM_SolverInterface.h  ipasir.cc  ipasir.h  librissc.cc  librissc.h
riss/core/: BMCwrapper.h  BoundedQueue.h  Communication.h  Compression.h  Constants.h  CoreConfig.cc  CoreConfig.h  Dimacs.h  EnumerateMaster.cc  EnumerateMaster.h  Main.cc  Makefile  Solver.cc  Solver.h  SolverCommunication.h  SolverTypes.h  Solver_C.h
riss/lib/: NuSVM_SolverInterface.h  ipasir.h
riss/mtl/: Alg.h  Alloc.h  BlockAlloc.h  HPVec.h  HashLookUpTable.h  Heap.h  HugePageAlloc.h  IntTypes.h  Map.h  Queue.h  SharedMemVec.h  Sort.h  TwinAlloc.h  Vec.h  XAlloc.h
riss/simp/: Main.cc  SimpSolver.cc  SimpSolver.h  Solver_C.cc.old  Solver_C.h
riss/utils/: AutoDelete.h  Compression.cc  Compression.h  Config.h  Debug.h  LockCollection.h  Options.cc  Options.h  ParseUtils.h  SimpleGraph.cc  SimpleGraph.h  Statistics-mt.cc  Statistics-mt.h  System.cc  System.h  ThreadController.h  VarFileParser.h  community.h  version.cmake  version.h  version.sh
risslibcheck/: CMakeLists.txt  Main.cc  README
shiftbmc/: CMakeLists.txt  README.txt  aigbmc.c  aiger-src.kdev4  libcp3c.h  shiftbmc.cc  shiftbmc.h  solveAndCheckBMC.sh  toolCheck.sh
test/: CMakeLists.txt  blockmemory.cc  compress_map.cc  compress_serialize.cc  memory.cc
(+696 files in other folders)
